--- a/build.gradle
+++ b/build.gradle
@@ -17,3 +17,7 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '3.1'
+}
