--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,16 @@ jdk:
   - oraclejdk8
 
 install: true
+
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
+
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
