--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,20 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    flatDir {
+        dirs 'libs'
+    }
+}
+
+jar {
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile name: 'Geometry-0.5'
 }
 
 task wrapper(type: Wrapper) {
